Fix avatar overflow on hover in Webkit browsers

--- a/assets/scss/components/_avatar.scss
+++ b/assets/scss/components/_avatar.scss
@@ -11,6 +11,8 @@ $_avatar-small-size: 2em * $typography-line-height-base;
     height: $_avatar-size;
     overflow: hidden;
     border-radius: 50%;
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .avatar__image {
